# agentic_coder

./: .dockerignore  .env.example  .gitignore  Makefile  PRODUCT.md  README.md  USAGE.md  agentic.yaml  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: api.Dockerfile  executor.Dockerfile  worker.Dockerfile
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_runs_and_transitions.py  0003_run_events_and_metadata.py  0004_poll_cursors.py  0005_chat_sessions.py
scripts/: smoke_test.py
src/agentic_coder/: __init__.py  config.py  executor_app.py  logging.py  pull_requests.py  worker.py
src/agentic_coder/agents/: __init__.py  chat_manager.py  coder.py  context.py  planner.py  pr_generator.py  reviewer.py  security.py  tester.py
src/agentic_coder/api/: chat.html  dashboard.html  main.py
src/agentic_coder/audit/: __init__.py  service.py
src/agentic_coder/db/: __init__.py  models.py  repositories.py  session.py
src/agentic_coder/domain/: __init__.py  tasks.py
src/agentic_coder/execution/: __init__.py  sandbox.py
src/agentic_coder/github_app/: __init__.py  models.py  service.py
src/agentic_coder/knowledge_graph/: __init__.py  builder.py  models.py  service.py
src/agentic_coder/models/: catalog.py  providers.py
tests/: test_api.py  test_coder.py  test_github_app_service.py  test_pipeline.py  test_policy_loader.py  test_pull_requests.py  test_redis_queue.py  test_task_state_machine.py  test_worker_polling.py  test_worker_process_task.py
(+10 files in other folders)
